[gd_scene load_steps=9 format=2]

[ext_resource path="res://Graphics/Snake_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Graphics/apple.png" type="Texture" id=3]
[ext_resource path="res://Graphics/grass.png" type="Texture" id=4]
[ext_resource path="res://Font/PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sound/crunch.wav" type="AudioStream" id=6]

[sub_resource type="TileSet" id=1]
0/name = "Snake_spritesheet.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 320, 80 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 2, 1 )
0/autotile/tile_size = Vector2( 40, 40 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "apple.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 40, 40 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 40, 40 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 5 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="SnakeApple" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 40, 40 )
format = 1

[node name="MoveSnakeTick" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -13.0
margin_top = -2.0
margin_right = 27.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="EatAppleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="timeout" from="MoveSnakeTick" to="." method="_on_MoveSnakeTick_timeout"]
